Fix: Overflow due to datetime picker
- Change the position of the datetime picker to fix overflow of schedule content layout
- Remove the default pointer in datetime picker which is pointing to the datetime input field

--- a/apps/xero_workspace/static/css/xero_workspace/schedule.css
+++ b/apps/xero_workspace/static/css/xero_workspace/schedule.css
@@ -133,7 +133,12 @@ p {
 }
 
 .bootstrap-datetimepicker-widget {
-    top: -130px !important;
+    top: -180px !important;
     left: 200px !important;
     bottom: auto !important;
+}
+
+.bootstrap-datetimepicker-widget.dropdown-menu:before,
+.bootstrap-datetimepicker-widget.dropdown-menu:after {
+    content: none !important;
 }
